--- a/style.css
+++ b/style.css
@@ -6,83 +6,61 @@
 
 main{
     width: 960px;
-    margin: 0 auto;
+    margin: 50px auto;
 }
 
-.list-box{
+.item-list{
     margin: 50px 0;
 }
 
-.list-item{
-    height: 50px;
-    line-height: 3.2;
+.item{
+    padding: 20px;
+    list-style: none;
 }
 
-.list-item p{
-    padding-left: 20px;
+.item:nth-child(odd){
+    background-color: #eee;
 }
 
-.list-item:nth-child(odd){
-    background-color: #f1f1f1;
-}
-
-.list-item:nth-child(even){
-    background-color: #fff;
-}
-
-.color-box{
-    margin-bottom: 50px;
-}
-
-.color-box{
+.box-list{
     display: flex;
     flex-wrap:wrap;
 }
 
-.box-item{
+.box{
     width: 30%;
     height: 200px;
-    background-color: gold;
+    background-color:gold;
+    margin-right: 5%;
+    margin-bottom: 40px;
 }
 
-.box-item:nth-child(1){
+.box:nth-child(1){
     background-color:  orange;
-    margin-right: 5%;
-    margin-bottom: 40px;
 }
 
-.box-item:nth-child(2){
-    margin-right: 5%;
-    margin-bottom: 40px;
+.box:nth-child(3){
+    margin-right: 0;
 }
 
-.box-item:nth-child(3){
-   margin-bottom: 40px;
+.box:nth-child(5){
+    background-color: orange;
 }
 
-.box-item:nth-child(4){
-    margin-right: 5%;
-    margin-bottom: 40px;
+.box:nth-child(6){
+    margin-right: 0;
 }
 
-.box-item:nth-child(5){
+.box:nth-child(7){
+   margin-bottom: 0;
+}
+
+.box:nth-child(8){
+   margin-bottom: 0;
+}
+
+.box:nth-child(9){
     background-color:  orange;
-    margin-right: 5%;
-    margin-bottom: 40px;
-}
-
-.box-item:nth-child(6){
-    margin-bottom: 40px;
-}
-
-.box-item:nth-child(7){
-   margin-right: 5%;
-}
-
-.box-item:nth-child(8){
-   margin-right: 5%
-}
-
-.box-item:nth-child(9){
-    background-color:  orange;
+    margin-right: 0;
+    margin-bottom: 0;
 }
